modified edit functionality

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<ul class="list-group" ng-if="hasTodos()">
 		<li class="list-group-item" ng-repeat="todo in todos track by $index">
 			<span ng-hide="todo.editable">{{todo.name}}</span>
-			<input type="text" ng-model="tempName" ng-show="todo.editable" ng-keyup="updateTodo($index, tempName)" />
+			<input type="text" ng-model="todo.name" ng-show="todo.editable" ng-keyup="updateTodo($index)" />
 			<span class="badge" ng-click="deleteTodo($index)">delete</span>
 			<span class="badge" ng-click="editMode($index)">edit</span>
 			
